# Applicant-Stats-Project

./: .clang-format  .gitignore  CMakeLists.txt  resources.qrc
legacy/: tableparsermaster.cpp  tableparsermaster.h
libs/: CMakeLists.txt
src/: main.cpp  xlsx.h
src/applicants-faculthy-data/: applicant.cpp  applicant.h  faculthy-direction.h  table-parser-bachelor.h
src/data-processing/: magic-hat.cpp  magic-hat.h  support-system.cpp  support-system.h  table-manager.cpp  table-manager.h
src/gui/: main-widget.cpp  main-widget.h  window-manager.cpp  window-manager.h
